[v8r5-pre2]
use DIRAC v6r17-pre6

* Fixes for CE-less sites, and general robustness
* Use LCGBundles 2016-12-09
* use LHCbGrid v11r2
* using alias
* minor fixes for rss system test
* voboxes update
* bugs and pylints
* test fix
* fix dirac-install.py path
* using glob to copy all files.
* Prepare to get site names from CS and remove dependency on explicit list of Tier1s
* break the line correctly
* use the correct configuration name and configuration version for the runs
* UpdateRemotePilotFile service will upload the latest version of the pilot scripts on the web server.
* add wcwidth
* pilotSynchronizer to update pilot scripts

[v8r5-pre1]
use DIRAC v6r17-pre5

* minor fixes
* remove not used development
* use timestamp when the dq is changed
* improve the materialized view performance
* add constraint to not delete a production from the productionscontainer table if the production has a corresponding job
* Use logging instead of print
* first commit for mesos tools
* First docker files
* rfc proxies by default
* remove lbvobox15 and lbvobox49
* Add lbvobox109 and lbvobox200

[v8r4p7]
use DIRAC v6r16p3

* Pylint fix

[v8r4p6]
use DIRAC v6r16p3

* no longer necessary to add "/" at the end of the direcotry name
* change to simulation conditions
* add a BK update latency
* new script to just check file existence and availability
* fix doc string
* randomize list of targetSEs
* fix missing definition of bkQuery
* Allow run ranges (run1:run2)
* fix misleading logging
* correct tests
* add ganag tests LHCBDIRAC-453
* NagiosTopologyAgent upgrades for VAC and VCYCLE plus fixes in SE function (no more useles ERROR or WARN messages)
* Artificially boosting the number of events created for MC
* add more tests
* only files with descendants will be set as processed
* Setting files with descendants as processed
* add more integration tests: #LHCBDIRAC-453
* Setting files with descendants as processed
* add missing port
* add integration tests
* fix the stored procedures