@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v8r5-pre3
+  {
+    Modules = LHCbDIRAC:v8r5-pre3, LHCbWebDIRAC:v4r2p4
+    Depends = DIRAC:v6r17-pre6
+    LcgVer = 2016-11-03
+  }
+
   v8r5-pre2
   {
     Modules = LHCbDIRAC:v8r5-pre2, LHCbWebDIRAC:v4r2p4
